# Utilities

./: .gitignore
.claude/: settings.local.json
ffmpeg-gui/: CLAUDE.md  CMakeLists.txt  README.md  spec.md
ffmpeg-gui/src/: main.cpp
ffmpeg-gui/src/command/: CommandBuilder.cpp  CommandBuilder.h
ffmpeg-gui/src/core/: ContainerRules.cpp  ContainerRules.h  ExtraArgsParser.cpp  ExtraArgsParser.h  FFmpegJob.cpp  FFmpegJob.h  JobValidator.cpp  JobValidator.h
ffmpeg-gui/src/gui/: App.cpp  App.h  MainFrame.cpp  MainFrame.h
ffmpeg-gui/src/process/: FFmpegProcess.cpp  FFmpegProcess.h  IProcessRunner.h  ProgressParser.cpp  ProgressParser.h  WxProcessRunner.cpp  WxProcessRunner.h
ffmpeg-gui/tests/: test_command_builder.cpp  test_container_rules.cpp  test_extra_args.cpp  test_job_validator.cpp
